# chat-app

./: .env  CODE_OF_CONDUCT.md  Cargo.toml  README.md  docker-compose.yml  init-mongo.js
.github/workflows/: rust.yml
src/: config.rs  main.rs
src/controllers/: auth_controller.rs  message_controller.rs  mod.rs
src/controllers/shared/: app_state.rs
src/infrastructure/: app_setup.rs  mod.rs
src/infrastructure/db/: connection.rs
src/infrastructure/jwt/: jwt_service.rs
src/infrastructure/ws/: mod.rs  web_socket_sender.rs
src/models/: api_errors.rs  jwt.rs  message.rs  mod.rs  user.rs
src/repositories/: errors.rs  message_repository.rs  mod.rs  user_repository.rs
src/services/: auth_service.rs  auth_service_abstract.rs  errors.rs  jwt_service_abstract.rs  message_service.rs  message_service_abstract.rs  mod.rs  web_socket_sender_abstract.rs
