[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
async-trait = "0.1.86"
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
mongodb = "3.2.1"
serde = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
